Fix flag alignment

--- a/sass/_moviedetails.scss
+++ b/sass/_moviedetails.scss
@@ -272,7 +272,7 @@ sidebar {
               color: #7aa3d6;
 
               &::after {
-                content: '•';
+                content: '\b7\a0';
                 margin-left: 2px;
               }
 
@@ -352,7 +352,7 @@ sidebar {
               span {
                 width: 22px;
                 height: 16px;
-                display: block
+                display: inline-block;
               }
 
               .flag {
